name:                audire
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/wayofthepie/audire#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen OBrien
maintainer:          wayofthepie@gmail.com
copyright:           2~Stephen OBriene
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:
    base >= 4.7 && < 5
    , attoparsec
    , bytestring
    , pcap
    , text
  default-language:    Haskell2010

executable audire-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , audire
  default-language:    Haskell2010

test-suite audire-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , audire
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wayofthepie/audire
